--- a/portfolio-frontend/.github/workflows/main.yml
+++ b/portfolio-frontend/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Revision the integrity of the project
 on:
   push:
     branches:
-      - "*"
+      - '**'
 
 jobs:
   deploy:
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -20,8 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Lint
+        run: npm run lint
+
       - name: Run tests
-        run: npm run test:headless
+        run: npm run test
 
       - name: Build
-        run: npm run build:prod
+        run: npm run build
