--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - run: cd portfolio-frontend
+
       - name: Lint
         run: npm run lint
 
